Added overclocking and other tweeks

--- a/arch/arm/configs/mericon_defconfig
+++ b/arch/arm/configs/mericon_defconfig
@@ -34,7 +34,7 @@ CONFIG_IRQ_WORK=y
 #
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_CROSS_COMPILE=""
+CONFIG_CROSS_COMPILE="/home/mericon/aokp/prebuilt/linux-x86/toolchain/arm-eabi-linaro-4.6.2/bin/arm-eabi-"
 CONFIG_LOCALVERSION="-Mericon"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -143,8 +143,9 @@ CONFIG_PERF_EVENTS=y
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
-# CONFIG_SLAB is not set
-CONFIG_SLUB=y
+#CONFIG_SLAB is not set
+CONFIG_SLAB=y
+CONFIG_SLUB=n
 # CONFIG_SLOB is not set
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
